<?xml version="1.0"?>
<package format="2">
  <name>twist_jogger_demo</name>
  <version>0.0.0</version>
  <description>Demo for the twist_jogger package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://gitlab.com/team-quix/arm/twist_jogger_demo</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>twist_jogger</exec_depend>

  <export>
  </export>
</package>
